fix cards overlap volume control

--- a/video-player-cards/src/cards-module/card/card.scss
+++ b/video-player-cards/src/cards-module/card/card.scss
@@ -4,7 +4,7 @@
   display: inline-block;
   opacity: 0;
   padding: 6px;
-  z-index: 65;
+  z-index: 59;
 
   &.animated {
     transition-property: left, right, top, bottom, opacity;
